# django-crud-views-extensions

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/superpowers/plans/: 2026-07-14-ci-cd-pipeline.md
docs/superpowers/specs/: 2026-07-14-ci-cd-pipeline-design.md
src/crud_views_widget_datetimepicker/: apps.py  assets.py  checks.py  conf.py  widgets.py
src/crud_views_widget_datetimepicker/management/commands/: cv_vendor_datetimepicker.py
src/crud_views_widget_datetimepicker/static/crud_views_widget_datetimepicker/: init.js
tests/: conftest.py  test_app_loads.py  test_assets_paths.py  test_conf.py  test_pipeline_compat.py  test_registration.py  test_vendor_command.py  test_widgets.py
