[project]
name = "django-crud-views-extensions"
version = "0.1.0"
description = "Incubator for django-crud-views extension apps (widgets, fields)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "django-crud-views>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-mock",
    "django-pipeline",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crud_views_widget_datetimepicker"]

[tool.uv.sources]
# Local development against the sibling checkout; releases use the PyPI pin above.
django-crud-views = { path = "../django-crud-views", editable = true }

[tool.pytest.ini_options]
addopts = "--strict-markers"
