[project]
name = "django-crud-views-extensions"
version = "0.1.2"
description = "Incubator for django-crud-views extension apps (widgets, fields)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "django-crud-views>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-mock",
    "django-pipeline",
    "pytest-cov",
    "ruff",
    "bump-my-version",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crud_views_widget_datetimepicker"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["crud_views_widget_datetimepicker"]

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
